[gd_scene load_steps=17 format=3 uid="uid://swvutukqgaxo"]

[ext_resource type="Script" uid="uid://b1hgbiqq2ptq5" path="res://game_objects/items/weapons/gun.gd" id="1_p85in"]
[ext_resource type="PackedScene" uid="uid://gfj0vsvmo4ik" path="res://game_objects/bullet/iterative_raycast_bullet.tscn" id="2_72rxi"]
[ext_resource type="Resource" uid="uid://bxmspql6usckj" path="res://game_objects/items/weapons/lpc_smgs/lpc_smg_gun_stats.tres" id="3_awhyt"]
[ext_resource type="PackedScene" uid="uid://lwgqm70goc2w" path="res://game_objects/items/weapons/lpc_smgs/manx_251Z/manx.gltf" id="4_k060u"]
[ext_resource type="Texture2D" uid="uid://dkcxx06s6kdp6" path="res://game_objects/items/weapons/hic_rifles/pm_52/PixelMuzzelFlash.png" id="5_wnmno"]
[ext_resource type="AudioStream" uid="uid://dull60hgujlxn" path="res://game_objects/items/weapons/lpc_pistols/lpc_shot_1.ogg" id="6_n2ked"]
[ext_resource type="AudioStream" uid="uid://bc1wim1c1t021" path="res://game_objects/items/weapons/fic_rifles/fic_mag_out.ogg" id="7_ehw6o"]
[ext_resource type="AudioStream" uid="uid://belfvaan2qeva" path="res://game_objects/items/weapons/fic_rifles/fic_mag_in.ogg" id="8_6da5u"]
[ext_resource type="AudioStream" uid="uid://c2wxubwa7ilv" path="res://game_objects/items/weapons/fic_rifles/fic_charging_handle.ogg" id="9_dyyx7"]

[sub_resource type="Animation" id="Animation_hu2i7"]
resource_name = "fire"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rga3e"]
_data = {
&"fire": SubResource("Animation_hu2i7")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_crbrf"]
size = Vector3(0.801163, 0.230716, 0.071228)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3v1xo"]
random_pitch = 1.05
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("6_n2ked")

[sub_resource type="Animation" id="Animation_8u1sy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blockbench_export/Node/magazines:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blockbench_export/Node/magazines:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_efo6u"]
resource_name = "reload"
length = 2.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagOutStreamPlayer3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_ehw6o")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MagInStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_6da5u")
}],
"times": PackedFloat32Array(1.6)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ChargingHandleStreamPlayer3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_dyyx7")
}],
"times": PackedFloat32Array(2)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uiu2q"]
_data = {
&"RESET": SubResource("Animation_8u1sy"),
&"reload": SubResource("Animation_efo6u")
}

[node name="Manx251Z" type="RigidBody3D" node_paths=PackedStringArray("muzzle", "muzzle_flash_animation_player", "fire_sound_player", "fire_timer", "reload_timer", "reload_animation_player", "gun_model_node", "scope_anchor", "on_scope_show_nodes", "on_scope_hide_nodes", "on_default_magazine_show_nodes", "on_default_magazine_hide_nodes", "on_extended_magazine_show_nodes", "on_extended_magazine_hide_nodes", "on_stable_foregrip_show_nodes", "mag_node", "model_node", "world_colliders")]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_p85in")
_bullet_scene = ExtResource("2_72rxi")
_gun_stats = ExtResource("3_awhyt")
muzzle = NodePath("blockbench_export/Node/Muzzle")
muzzle_flash_animation_player = NodePath("blockbench_export/Node/Muzzle/MuzzleFlashAnimationPlayer")
fire_sound_player = NodePath("ShotAudioStreamPlayer3D")
fire_timer = NodePath("FireTimer")
reload_timer = NodePath("ReloadTimer")
reload_animation_player = NodePath("AnimationPlayer")
gun_model_node = NodePath("blockbench_export/Node")
scope_anchor = NodePath("blockbench_export/Node/scope_anchor")
on_scope_show_nodes = [NodePath("blockbench_export/Node/optics_rail")]
on_scope_hide_nodes = [null]
on_default_magazine_show_nodes = [null]
on_default_magazine_hide_nodes = [null]
on_extended_magazine_show_nodes = [null]
on_extended_magazine_hide_nodes = [null]
on_stable_foregrip_show_nodes = [null]
mag_node = NodePath("blockbench_export/Node/magazine")
item_type_id = "manx_251z"
model_node = NodePath("blockbench_export/Node")
world_colliders = [NodePath("CollisionShape3D")]
metadata/_custom_type_script = "uid://b1hgbiqq2ptq5"

[node name="blockbench_export" parent="." instance=ExtResource("4_k060u")]

[node name="optics_rail" parent="blockbench_export/Node" index="5"]
visible = false

[node name="Muzzle" type="Node3D" parent="blockbench_export/Node" index="6"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -7.60565e-10, 0, -0.41366)
visible = false

[node name="FlashSpriteV3D" type="Sprite3D" parent="blockbench_export/Node/Muzzle"]
transform = Transform3D(0.2, 0, 0, 0, 0.14, 0, 0, 0, 0.14, 0, 0, -0.323556)
cast_shadow = 0
axis = 1
alpha_cut = 2
texture_filter = 0
texture = ExtResource("5_wnmno")

[node name="FlashSpriteH3D" type="Sprite3D" parent="blockbench_export/Node/Muzzle"]
transform = Transform3D(-6.11959e-09, 0.2, 0, -0.14, -8.74228e-09, 0, 0, 0, 0.14, 0, 0, -0.323556)
cast_shadow = 0
axis = 1
alpha_cut = 2
texture_filter = 0
texture = ExtResource("5_wnmno")

[node name="OmniLight3D" type="OmniLight3D" parent="blockbench_export/Node/Muzzle"]
transform = Transform3D(1.66667, 0, 0, 0, 1.66667, 0, 0, 0, 1.66667, 0, 0, -0.19)
light_color = Color(0.917647, 0.784314, 0.611765, 1)
shadow_enabled = true
distance_fade_enabled = true

[node name="MuzzleFlashAnimationPlayer" type="AnimationPlayer" parent="blockbench_export/Node/Muzzle"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rga3e")
}

[node name="scope_anchor" type="Node3D" parent="blockbench_export/Node" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.31228e-07, 0.104191, 0.0301004)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.00137329, -0.00970712, -0.00533504)
shape = SubResource("BoxShape3D_crbrf")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="Right_Hand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0.025, -0.0800124, 0.12326)

[node name="Right_Fingers" type="Node3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 7.10543e-15, -8.74228e-08, -1, 0, 7.10543e-15, -6.21177e-22, 1, -0.0017045, -0.0827972, 0.0699859)

[node name="HipFire" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.171, 0.14, 0.398)

[node name="Label3D" type="Label3D" parent="HipFire"]
visible = false
billboard = 1
text = "HF"

[node name="ADS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0921711, 0.526098)

[node name="Left_Hand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0283023, -0.0279336, -0.205517)

[node name="Left_Fingers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0436592, -0.0277497, -0.201488)

[node name="ADS_Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, 0)

[node name="MagInStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 1
bus = &"SFX"

[node name="MagOutStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 1
bus = &"SFX"

[node name="ChargingHandleStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 1
bus = &"SFX"

[node name="ShotAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_3v1xo")
volume_db = 6.0
max_polyphony = 20
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uiu2q")
}

[editable path="blockbench_export"]
